--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body{
 .containerMain{
     display: flex;
     flex-direction: column;
-    /* flex: 1; */
 }
 .containerOne{
     background-color: #1F2937;
@@ -42,9 +41,6 @@ a{
     text-decoration: none;
     font-size: 1.5rem;
 }
-.forest{
-    border: 3px solid gray;
-}
 .two{
     display: flex;
     flex: 1;
@@ -66,11 +62,12 @@ a{
     font-size: 1rem;
     font-weight: 600;
 }
-.forest{
+.nature{
     max-width: 20%;
     margin-right: 2rem;
     margin-bottom: 2rem;
     border-radius: 20px;
+    border: 3px solid gray;
 }
 .buttonOne{
     border-radius: 10px;
@@ -105,7 +102,7 @@ a{
     justify-content: center;
 }
 .animals p{
-    font-size: 1rem;
+    font-size: 1.5rem;
     font-weight: 500;
     text-align: center;
 }
@@ -181,28 +178,48 @@ footer{
     padding: 0.5rem;
     color: whitesmoke;
 }
-@media (max-width:1240px){
+@media (max-width:1023px){
     .animals{
         flex-direction: column;
         align-items: center;
     }
-    .navBar{
+    .logo{
+        margin-left: 0;
+    }
+    .one{
         flex-direction: column;
-        align-items: flex-end;
-        margin-top: 4rem;
-        margin-right: 1rem;
-    }
-    .forest{
-        margin-right: 1rem;
-        height: 4rem;
-        width: 6rem;
-    }
-    .two{
         align-items: center;
     }
-}
-@media (max-width:280px){
     .navBar{
-        display: none;
+        justify-content: center;
+        margin: 2rem 0 0 0;
     }
+    a{
+        font-size: 1rem;
+    }
+    .nature{
+        max-width: 50%;
+        border: 0;
+        margin: 1.5rem 0 0 0;
+    }
+    .two{
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    .subHeading{
+        padding: 0.5rem;
+    }
+    .containerTwo > p{
+        text-align: center;
+    }
+    .containerInnerFour{
+        flex-direction: column;
+    }
+    .signUp > p{
+        text-align: center;
+    }
+    .buttonTwo{
+        margin-right: 0;
+    }
+    
 }
