--- a/style.css
+++ b/style.css
@@ -206,8 +206,16 @@ footer{
         flex-direction: column-reverse;
         align-items: center;
     }
+    .three{
+        margin: 0;
+        align-items: center;
+    }
+    .heading{
+        text-align: center;
+    }
     .subHeading{
-        padding: 0.5rem;
+        padding: 1rem;
+        text-align: center;
     }
     .containerTwo > p{
         text-align: center;
