--- a/style.css
+++ b/style.css
@@ -212,6 +212,7 @@ footer{
     }
     .heading{
         text-align: center;
+        padding: 1rem;
     }
     .subHeading{
         padding: 1rem;
